--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     rel="stylesheet">
   <title>Frontend Mentor | Product preview card component</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link href="/dist/main.css" rel="stylesheet">
+  <link href="./dist/main.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="grid-container" style="height:621px; width:348px;">
   
     <div class="product"style="width: 348px">
-      <img src="/images/image-product-mobile.jpg" class="card-img-top" alt="Gabrielle Essence Eau De Parfum">
+      <img src="./images/image-product-mobile.jpg" class="card-img-top" alt="Gabrielle Essence Eau De Parfum">
     </div>
 
     <div classs="product-content">
@@ -36,7 +36,7 @@
     <div class="s"><s>$169.99</s></div>
 </section>
 <div class="button">
-  <a href="#" class="btn"> <img src="/images/icon-cart.svg"> Add to Cart</a>
+  <a href="#" class="btn"> <img src="./images/icon-cart.svg"> Add to Cart</a>
 </div>
 
   </div>
