--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 </head>
 
 <body>
-  <div class="grid-container" style="height:621px; width:348px;">
+  <div class="grid-container">
   
-    <div class="product"style="width: 348px">
-      <img src="./images/image-product-mobile.jpg" class="card-img-top" alt="Gabrielle Essence Eau De Parfum">
+    <div class="product">
+          <img src="./images/image-product-mobile.jpg" class="card-img-top" alt="Gabrielle Essence Eau De Parfum">
+    <div class="product-desktop-hide-for-mobile">
+      <img src="./images/image-product-desktop.jpg" class="card-img-left" alt="Gabrielle Essence Eau De Parfum">
+    </div>
     </div>
 
     <div classs="product-content">
